--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 * {
   font-size: 16px;
-  font-family: Dank mono;
+  font-family: Annotation mono;
   min-height: 0;
-  border-radius: 1rem;
+  border-radius: 0rem;
   padding: 0.1rem;
 }
 
